# HPC4WC

projects/2025/project02b-cnn-cpp/: .gitignore  CMakeLists.txt  README.md  plot_gpu_scaling.py  plot_xpu_cross_scaling.py  runme.sh
projects/2025/project02b-cnn-cpp/benchmarking/: fullbench_cpu.sh  fullbenchmark_cpu.py  old_benchmark_gpu_vs_cpu.sh  plot_full_cpu.py  quickbench_cpu.py  quickbench_cpu.sh  run_gpu_benchmark.sh
projects/2025/project02b-cnn-cpp/data/: download_mnist.py
projects/2025/project02b-cnn-cpp/include/gpu/: cnn_cuda.hpp  conv2d_cuda.hpp  linear_cuda.hpp  maxpool_cuda.hpp  relu_cuda.hpp  types_cuda.hpp
projects/2025/project02b-cnn-cpp/include/naive/: cnn_naive.hpp  conv2d_naive.hpp  linear_naive.hpp  maxpool_naive.hpp  relu_naive.hpp
projects/2025/project02b-cnn-cpp/include/naive_opt/: cnn_opt.hpp  conv2d_opt.hpp  linear_opt.hpp  maxpool_opt.hpp  relu_opt.hpp  tensors.hpp
projects/2025/project02b-cnn-cpp/include/naive_opt_alt/: cnn_opt_alt.hpp  conv2d_opt_alt.hpp  linear_opt_alt.hpp  maxpool_opt_alt.hpp  relu_opt_alt.hpp
projects/2025/project02b-cnn-cpp/include/stencil/: cnn_stencil.hpp  conv2d_stencil.hpp  linear_stencil.hpp  maxpool_stencil.hpp  relu_stencil.hpp
projects/2025/project02b-cnn-cpp/include/stencil_opt/: cnn_stencil_opt.hpp  conv2d_stencil_opt.hpp  linear_stencil_opt.hpp  maxpool_stencil_opt.hpp  relu_stencil_opt.hpp  tensors.hpp
projects/2025/project02b-cnn-cpp/include/stencil_opt_alt/: cnn_stencil_alt.hpp  conv2d_stencil_alt.hpp  linear_stencil_alt.hpp  maxpool_stencil_alt.hpp  relu_stencil_alt.hpp
projects/2025/project02b-cnn-cpp/logs/: results_strong.tsv  results_weak.tsv
projects/2025/project02b-cnn-cpp/src/gpu/: cnn_cuda.cpp  conv2d_cuda.cu  linear_cuda.cu  maxpool_cuda.cu  relu_cuda.cu  test_mnist_gpu.cpp
projects/2025/project02b-cnn-cpp/src/naive/: cnn_naive.cpp  conv2d_naive.cpp  linear_naive.cpp  maxpool_naive.cpp  relu_naive.cpp  test_mnist.cpp
projects/2025/project02b-cnn-cpp/src/naive_opt/: cnn_opt.cpp  conv2d_opt.cpp  linear_opt.cpp  maxpool_opt.cpp  relu_opt.cpp  test_mnist_opt.cpp
projects/2025/project02b-cnn-cpp/src/naive_opt_alt/: cnn_opt_alt.cpp  conv2d_opt_alt.cpp  linear_opt_alt.cpp  maxpool_opt_alt.cpp  relu_opt_alt.cpp  test_mnist_opt_alt.cpp
projects/2025/project02b-cnn-cpp/src/stencil/: cnn_stencil.cpp  conv2d_stencil.cpp  linear_stencil.cpp  maxpool_stencil.cpp  relu_stencil.cpp  test_mnist_stencil.cpp
projects/2025/project02b-cnn-cpp/src/stencil_opt/: cnn_stencil_opt.cpp  conv2d_stencil_opt.cpp  linear_stencil_opt.cpp  maxpool_stencil_opt.cpp  relu_stencil_opt.cpp  test_mnist_stencil_opt.cpp
projects/2025/project02b-cnn-cpp/src/stencil_opt_alt/: cnn_stencil_alt.cpp  conv2d_stencil_alt.cpp  linear_stencil_alt.cpp  maxpool_stencil_alt.cpp  relu_stencil_alt.cpp  test_mnist_stencil_alt.cpp
